fix lôi
