# backend/xbank/swagger.yaml
@@ -309,26 +309,58 @@ paths:
         - bearerAuth: []
       parameters:
         - in: query
-          name: date
+          name: page
           schema:
-            type: string
-            format: date
-            example: 2020-10-05
+            type: number
+            example: 2
         - in: query
-          name: menu
+          name: size
           schema:
-            type: string
-            enum: [dinner, lunch, breakfast]
-            example: dinner
+            type: number
+            example: 10
       responses:
         '200':
-          description: Login success
+          description: List transaction
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/Transaction'
+        '400':
+          description: Bad input parameter
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Meta400'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Meta500'
+  /api/transactions/{id}:
+    get:
+      tags:
+        - Transactions
+      description: API detail transaction
+      operationId: Transaction detail
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: number
+            example: 10
+      responses:
+        '200':
+          description: Detail transaction
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Transaction'
         '400':
           description: Bad input parameter
           content:
@@ -369,7 +401,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Meta500'
-  /api/notifications/{news_id}:
+  /api/notifications/{id}:
     get:
       tags:
         - Notifications
@@ -379,7 +411,7 @@ paths:
         - bearerAuth: []
       parameters:
         - in: path
-          name: news_id
+          name: id
           required: true
           schema:
             type: integer
@@ -436,45 +468,53 @@ components:
         id:
           type: integer
           format: int64
-        image:
+          example: 11
+        owner:
           type: string
-          example: http://image.com
-        name:
+          example: admin
+        action:
+          type: number
+          example: 1
+        account:
           type: string
-          example: Món 1
-        calo:
-          type: integer
-          example: 450
-        heart:
-          type: integer
-          example: 50
-        star:
-          type: integer
-          example: 4
-        description:
+          example: user
+        toAccount:
           type: string
-          example: Các loại thực phẩm khác nhau cung cấp mức năng lượng khác nhau. Protein và carbohydrate chỉ cung cấp khoảng một nửa lượng calo mỗi gram so với chất béo.
+          example: user1
+        amount:
+          type: integer
+          example: 10000
+        currency:
+          type: string
+          example: VND
+        transactAt:
+          type: string
+          format: date
+          example: 2020-12-27
+        result:
+          type: number
+          example: 1
+        error:
+          type: string
+          example: No error
     Notification:
       type: object
       properties:
         id:
           type: integer
           format: int64
-        image_url_list:
+        account:
           type: string
-          example: [url_image1, url_image2, url_image3]
+          example: user
         title:
           type: string
-          example: Món 1
-        heart:
-          type: integer
-          example: 50
-        view:
-          type: integer
-          example: 4
-        description:
+          example: user has transferred to you 10000 at 2020-12-27T23:34:03.096268
+        createdDate:
           type: string
-          example: Các loại thực phẩm khác nhau cung cấp mức năng lượng khác nhau. Protein và carbohydrate chỉ cung cấp khoảng một nửa lượng calo mỗi gram so với chất béo.
+          example: 2020-12-10
+        lastModifiedDate:
+          type: string
+          example:  2020-12-10
     Meta400:
       type: object
       required:
